--- a/src/source/views/performance.html
+++ b/src/source/views/performance.html
@@ -255,6 +255,8 @@
 
 </body>
 
+<script src="../../backend/performance.js"></script>
+
 <script>
     const downloadButton = document.querySelector('.btn-circle-download');
     downloadButton.addEventListener('click', function() {
