fixed overflow in kpi for performance

--- a/src/source/views/performance.html
+++ b/src/source/views/performance.html
@@ -150,7 +150,7 @@
                   <div class="col col-1">Type</div>
                   <div class="col col-2">Data</div>
               </li>
-              <ul class="responsive-row" id="kpi_dash">
+              <ul class="responsive-row-perf" id="kpi_dash">
                 <li class="table-row">
                   <div class="col col-1" data-label="revenue">revenue</div>
                   <div class="col col-2" data-label="data_revenue" id="revenue_dash"></div>
