--- a/src/source/views/login.html
+++ b/src/source/views/login.html
@@ -28,6 +28,8 @@
     function saveUsername() {
         var username = document.getElementById('username').value;
         localStorage.setItem('username', username);
+        localStorage.setItem('notification', "");
+        localStorage.setItem('noti number',0);
     }
     </script>
 
