--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -109,7 +109,7 @@
 
             <li><a href="#" id = "notification">
                 <i class="notification-box">
-                    <span class="notification-count">1</span>
+                    <span class="notification-count" id="noticount"></span>
                     <div class="notification-bell">
                         <span class="bell-top"></span>
                         <span class="bell-middle"></span>
@@ -198,7 +198,7 @@
         <div class="col-7">
             <p class="title">
             Notifications
-            <span class="unread-notifications-number">2</span>
+            <span class="unread-notifications-number" id="noticount2"></span>
             </p>
         </div>
         </div>
