--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -71,20 +71,6 @@
           <div class="top_menu">
             <div class="logo"></div>
             <ul>
-	    <li><a href="#" id = "fifolifo">
-                    <i class="material-icons"></i>
-                    <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1024 320l-512-256-512 256 512 256 512-256zM512 148.97152l342.05696 171.02848-342.05696 171.02848-342.05696-171.02848 342.05696-171.02848zM921.43616 460.71808l102.56384 51.28192-512 256-512-256 102.56384-51.28192 409.43616 204.71808zM921.43616 652.71808l102.56384 51.28192-512 256-512-256 102.56384-51.28192 409.43616 204.71808z"  />
-              </svg>
-            </a></li>
-		    
-            <li><a href="#" id = "setting">
-                    <i class="material-icons"></i>
-                    <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M511.9935 699.733c-102.4 0-187.733-85.333-187.733-187.733s85.333-187.733 187.733-187.733S699.7265 409.6 699.7265 512s-85.333 187.733-187.733 187.733z m472.177-250.311c-5.689-22.756-22.756-39.822-45.511-45.511l-11.378-5.689c-34.133-11.378-68.267-34.133-91.022-68.267s-22.756-73.956-17.067-113.778l5.689-11.378c5.689-17.067 0-45.511-17.067-62.578 0 0-17.067-11.378-56.889-34.133s-56.889-28.444-56.889-28.444c-22.756-5.689-45.511 0-62.578 17.067l-11.378 11.378c-28.444 22.756-68.267 39.822-108.089 39.822s-79.644-17.067-108.089-39.822l-5.689-17.067c-17.067-11.378-45.511-22.756-62.578-11.378 0 0-17.067 5.689-56.889 28.444s-56.889 34.133-56.889 34.133c-17.067 17.067-28.444 39.822-22.756 62.578l5.689 17.067c11.378 34.133 5.689 73.956-17.067 113.778-22.756 28.444-51.2 51.2-91.022 62.578l-11.378 5.689c-22.756 0-39.822 22.756-45.511 45.511 0 0-5.689 17.067-5.689 62.578s5.689 62.578 5.689 62.578c5.689 22.756 22.756 39.822 45.511 45.511l11.378 5.689c34.133 11.378 68.267 34.133 91.022 68.267s22.756 73.956 17.067 113.778l-5.689 11.378c-5.689 17.067 0 45.511 17.067 62.578 0 0 17.067 11.378 56.889 34.133s56.889 28.444 56.889 28.444c22.756 5.689 45.511 0 62.578-17.067l11.378-11.378c28.444-28.444 62.578-39.822 108.089-39.822 39.822 0 79.644 17.067 108.089 39.822l11.378 11.378c17.067 17.067 39.822 22.756 62.578 17.067 0 0 17.067-5.689 56.889-28.444s56.889-34.133 56.889-34.133 22.756-39.822 17.067-62.578l-5.689-17.067c-11.378-34.133-5.689-73.956 17.067-108.089s51.2-56.889 91.022-68.267l17.067-5.689c22.756-5.689 39.822-22.756 45.511-45.511 0 0 5.689-17.067 5.689-62.578-5.689-45.511-11.378-62.578-11.378-62.578z"  />
-                    </svg>
-                </a></li>
-
             <li><a href="#" id = "download">
                 <i class="btn-circle-download">
                     <svg id="arrow" width="14px" height="20px" viewBox="17 14 14 20">
@@ -180,18 +166,6 @@
 </div>
 
 <div class="container">
-    <div class="fifolifoContent" id="fifolifoPopup">
-      <label for="startdate">lifo
-      </label>
-      <input type="checkbox" id="checkbox_lifo" name="checkbox">
-      <label for="enddate">fifo
-      </label>
-      <input type="checkbox" id="checkbox_fifo" name="checkbox">
-      <button class="confirm">Confirm</button>
-      </div>
-</div> 
-
-<div class="container">
     <div class="container notifications-container shadow" id = "notiPopup">
         <div class = "realheader">
         <div class="row header">
@@ -206,7 +180,7 @@
 
 
         <div class="row notifications">
-        <div class="col-12 id ="getnoti">
+        <div class="col-12" id ="getnoti">
 
 
 	</div>
@@ -307,27 +281,6 @@
         function redirectToLogin() {
             window.location.href = "login.html";
         }
-    });
-</script>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const settingButton = document.querySelector("#fifolifo");
-        const settingPopup = document.getElementById("fifolifoPopup");
-    
-        settingButton.addEventListener("click", function(event) {
-          settingPopup.style.display = "flex"; 
-        });
-    
-        document.addEventListener("click", function(event) {
-            const clickInsidesettingButton = settingButton.contains(event.target);
-            const clickInsidesettingPopup = settingPopup.contains(event.target);
-  
-            if (!clickInsidesettingButton && !clickInsidesettingPopup) {
-              settingPopup.style.display = "none"; 
-            }
-        });
-  
     });
 </script>
 
@@ -489,39 +442,6 @@ var count2 = document.getElementById("noticount2");
 count1.innerHTML = notinum;
 count2.innerHTML = notinum;
 notibar.innerHTML += noti;
-</script>
-
-<script>
-document.getElementById('settingPopup').addEventListener('click', (event) => {
-    event.preventDefault();
-    const start = document.getElementById('startdate').value;
-    const end = document.getElementById('enddate').value;
-    const message = "change fiscal year";
-    var username = localStorage.getItem('username');
-    ipcRenderer.send('send date', {end,username,message});
-    // or set date in local storage and send them along with other info for function we need
-    localStorage.setItem('start', start);
-    localStorage.setItem('end', end); 
-  });
-</script>
-
-<script>
-document.getElementById('fifolifoPopup').addEventListener('click', (event) => {
-    event.preventDefault();
-    const fifo = document.getElementById('fifo');
-    const lifo = document.getElementById('lifo');
-    var username = localStorage.getItem('username');
-    const message = "change lifo fifo";
-    if(lifo.checked == true && fifo.checked == true){
-        alert("choose one of two options");
-    }else if(lifo.checked == false && fifo.checked == false){
-        alert("choose one");
-    }else{
-        const status = lifo.checked ? "lifo": "fifo" ;
-        ipcRenderer.send('change lifo fifo', {status,username,message});
-        localStorage.setItem('lifo-fifo', status);
-    }
-  });
 </script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
