--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -305,13 +305,8 @@
 
 <div class="container">
     <div class="fifolifoContent" id="fifolifoPopup">
-      <label for="startdate">lifo
-      </label>
-      <input type="checkbox" id="checkbox_lifo" name="checkbox">
-      <label for="enddate">fifo
-      </label>
-      <input type="checkbox" id="checkbox_fifo" name="checkbox">
-      <button type="button">Confirm</button>
+      <button type="click" id="lifo">lifo</button>
+      <button type="click" id="fifo">fifo</button>
       </div>
 </div> 
 
