--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -169,7 +169,9 @@
     <div class="profileContent" id="profilePopup">
     <span class="arrow"></span>
     <img src="../public/images/mini.png" alt="cookies-img" />
-    <p  id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>    </div>
+    <p  id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>    
+    <button class="accept">Log out</button>
+    </div>
 </div>
 
 <div class="container">
